# ansible-playbooks

./: .gitignore  .yamllint.yml  Makefile  README.dev.md  README.md  ansible.cfg  galaxy.yml  k3s.yml  pyproject.toml  requirements.yml
.config/: ansible-lint-ignore.txt  ansible-lint.yml
.github/workflows/: lint.yml  lint.yml.disabled  tests.yml
extensions/molecule/: config.yaml
extensions/molecule/debian_common/: molecule.yml  verify.yml
extensions/molecule/default/: molecule.yml
extensions/molecule/fail2ban/: verify.yml
extensions/molecule/group_vars/: all.yml
extensions/molecule/k3s/: README.disabled.md  converge.yml  converge.yml.disabled  molecule.yml
group_vars/: all.yml
molecule/azure_ci_agent/: converge.yml  verify.yml
molecule/debian_common/: molecule.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/group_vars/: all.yml
molecule/k3s/: converge.yml
molecule/nut_client/: converge.yml  verify.yml
molecule/proxmox/: converge.yml
molecule/proxmox_install/: converge.yml  molecule.yml  verify.yml
molecule/sshd/: converge.yml  molecule.yml  verify.yml
molecule/tools_common/: converge.yml  molecule.yml
molecule/ubuntu_common/: converge.yml  molecule.yml
molecule/users/: molecule.yml
molecule/users_bastion/: converge.yml  molecule.yml  verify.yml
roles/fail2ban/: README.md
roles/fail2ban/tasks/: main.yml
roles/k3s/: README.md  main.yml
roles/nfs_client/: main.yml
roles/proxmox_install/: README.md
roles/ubuntu_common/: main.yml
roles/users/: README.md
roles/users_bastion/: README.md
(+74 files in other folders)
