[project]
name = "ansible-playbooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible>=13.6.0",
    "ansible-lint>=26.4.0",
    "molecule>=26.4.0",
    "molecule-plugins[docker,vagrant]>=25.8.12",
    "molecule-vagrant>=2.0.0",
    "python-vagrant>=1.0.0",
    "yamllint>=1.38.0",
]
